@@ -10,6 +10,7 @@
 * Group recently used and active projects at the top of the menu
 * Add a manual update page for easier upgrading of unreleased versions
 * Include a create menu item for documents
+* Allow re-opening of completed milestones
 
 * Don't send notifications to disabled accounts
 * Re-enable eclipse build handling
